--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			</div>
 		</div>		
 	</section>
-	<section class="section4" id>
+	<section class="section4" id="pricing">
 		<div class="heading">
 			<h2>our pricing</h2>
 		</div>
