--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<li><a href="#style" onclick="toggleMenu()">styles</a></li>
 			<li><a href="#artists" onclick="toggleMenu()">atitsts</a></li>
 			<li><a href="#pricing" onclick="toggleMenu()">pricing</a></li>
+			<li><a href="#contact" onclick="toggleMenu()">contact</a></li>
 		</ul>
 	</header>
 
@@ -99,7 +100,7 @@
 		</div>
 		
 	</section>
-	<footer class="footer">
+	<footer class="footer" id="contact">
 		<div class="heading">
 			<h2> About Us</h2>
 		</div>
