--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<div class="banner-div">
 			<h4>SINCE 1996</h4>
 			<h1>professional<br>tatttos</h1>
-			<a href="" class="button">get you ink now</a>	
+			<a href="#style" class="button">get you ink now</a>	
 		</div>		
 	</section>
 	<section class="section2" id="style">
